--- a/fundamentals/02-css/lesson-01-beginner.html
+++ b/fundamentals/02-css/lesson-01-beginner.html
@@ -2259,14 +2259,56 @@
         -->
         <div class="pc-nth-child">
           <h3>Pseudo-Class :nth-child()</h3>
-          <p>Second child of div</p>
-          <div>
-            <div>Div 1</div>
-            <div>Div 2</div>
-            <div>Div 3</div>
-            <div>Div 4</div>
-            <div>Div 5</div>
-            <div>Div 6</div>
+
+          <div class="example-1">
+            <p>Example paragraph 1</p>
+            <p>Example paragraph 2</p>
+            <p>Example paragraph 3</p>
+            <p>Example paragraph 4</p>
+            <p>Example paragraph 5</p>
+            <p>Example paragraph 6</p>
+            <p>Example paragraph 7</p>
+            <p>Example paragraph 8</p>
+            <p>Example paragraph 9</p>
+          </div>
+
+          <div class="example-2">
+            <p>Example paragraph 1</p>
+            <p>Example paragraph 2</p>
+            <p>Example paragraph 3</p>
+            <p>Example paragraph 4</p>
+            <p>Example paragraph 5</p>
+            <p>Example paragraph 6</p>
+            <p>Example paragraph 7</p>
+            <p>Example paragraph 8</p>
+            <p>Example paragraph 9</p>
+          </div>
+
+          <div class="example-3">
+            <ol>
+              <li>Item 1</li>
+              <li>Item 2</li>
+              <li>Item 3</li>
+              <li>Item 4</li>
+              <li>Item 5</li>
+              <li>Item 6</li>
+              <li>Item 7</li>
+              <li>Item 8</li>
+              <li>Item 9</li>
+            </ol>
+          </div>
+
+          <div class="example-4">
+            <ul>
+              <li>Orange</li>
+              <li class="fruits">Apple</li>
+              <li class="fruits">Mango</li>
+              <li class="fruits">Grapes</li>
+              <li class="fruits">Banana</li>
+              <li>Watermelon</li>
+              <li class="fruits">Cheery</li>
+              <li class="fruits">Pear</li>
+            </ul>
           </div>
         </div><br>
 
